components/centraldashboard-angular/manifests/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: centraldashboard-angular
  name: centraldashboard-angular
spec:
  replicas: 1
  selector:
    matchLabels:
      app: centraldashboard-angular
  template:
    metadata:
      labels:
        app: centraldashboard-angular
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - name: centraldashboard-angular
        image: ghcr.io/kubeflow/dashboard/centraldashboard-angular
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8082
          initialDelaySeconds: 30
          periodSeconds: 30
        ports:
        - containerPort: 8082
          protocol: TCP
      serviceAccountName: centraldashboard-angular
