components/centraldashboard-angular/manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dashboard-angular
  name: dashboard-angular
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8082
  selector:
    app: dashboard-angular
  sessionAffinity: None
  type: ClusterIP
