components/centraldashboard-angular/manifests/base/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dashboard-angular
  podSelector:
    matchExpressions:
      - key: app
        operator: In
        values:
          - dashboard-angular
  ingress:
    - from:
        - namespaceSelector:
            matchExpressions:
              - key: kubernetes.io/metadata.name
                operator: In
                values:
                  - istio-system
        - podSelector: {}
  policyTypes:
    - Ingress
